# kern-comm-lib

./: .gitignore  404.html  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  win_automator.bat
.github/workflows/: docs.yaml
api_reference/: index.html
api_reference/base/: index.html
api_reference/base/log/: index.html
api_reference/base/log/check/: index.html
api_reference/base/log/log/: index.html
api_reference/base/log/log_formatter/: index.html
api_reference/base/log/log_handlers/: index.html
api_reference/base/log/log_severity/: index.html
api_reference/base/log/logger/: index.html
api_reference/base/os/: index.html
api_reference/base/os/platform_vars/: index.html
api_reference/base/status/: index.html
api_reference/base/status/status/: index.html
api_reference/base/status/status_code/: index.html
api_reference/base/status/status_or/: index.html
api_reference/base/threads/: index.html
api_reference/base/threads/mutex/: index.html
api_reference/filesystem/: index.html
api_reference/filesystem/kpath/: index.html
assets/: kern_comm_lib_logo.xcf
automations/: build_kern.py  check_code.py  const.py  format_code.py  my_automator.py  pytest_kern.py  type_check_code.py
docs/dev/: common_cmds.md
docs/website/: mkdocs.yml
docs/website/docs/: index.md
docs/website/docs/api_reference/: index.md
docs/website/docs/api_reference/base/: index.md
docs/website/docs/api_reference/base/log/: check.md  index.md  log.md  log_formatter.md  log_handlers.md  log_severity.md  logger.md
docs/website/docs/api_reference/base/os/: index.md  platform_vars.md
docs/website/docs/api_reference/base/status/: index.md  status.md  status_code.md  status_or.md
docs/website/docs/api_reference/base/threads/: index.md  mutex.md
docs/website/docs/api_reference/filesystem/: index.md  kpath.md
docs/website/docs/programming_guides/: index.md  status_user_guide.md
docs/website/docs/stylesheets/: extra.css
docs/website/source/: conf.py  index.rst
docs/website/source/api_reference/: api_reference.rst  package.rst
docs/website/source/api_reference/status/: status.rst  status_or.rst
examples/: README.md  logging_example.py  use_status_objects.py
programming_guides/: index.html
programming_guides/status_user_guide/: index.html
search/: search_index.json
src/kern_comm_lib/: __init__.py
src/kern_comm_lib/base/: __init__.py  status.py  status_code.py  status_or.py
src/kern_comm_lib/base/log/: check.py  log.py  log_formatter.py  log_handlers.py  log_severity.py  logger.py
src/kern_comm_lib/base/os/: __init__.py  platform_vars.py
src/kern_comm_lib/base/status/: status.py  status_code.py  status_or.py
src/kern_comm_lib/base/threads/: locks.py  mutex.py
src/kern_comm_lib/filesystem/: __init__.py  kpath.py
src/kern_comm_lib/log/: check.py
src/kern_comm_lib/os/: platform_vars.py
src/kern_comm_lib/status/: status.py  status_or.py
tests/: test_kpath.py  test_log.py  test_log_severity.py  test_platform_vars.py  test_status.py  test_status_code.py  test_status_or.py
